[gd_scene load_steps=5 format=3 uid="uid://y0soprkw6xq1"]

[ext_resource type="Script" path="res://ui/options_menu/options_menu.gd" id="1_dmpnt"]
[ext_resource type="PackedScene" uid="uid://6hfxgildm5pi" path="res://ui/button_remapper/button_remapper.tscn" id="2_378xx"]
[ext_resource type="PackedScene" uid="uid://566wfnl0ax2o" path="res://ui/shortcut_button/shortcut_button.tscn" id="3_2s1fw"]
[ext_resource type="PackedScene" uid="uid://bm2v03n8v0i18" path="res://ui/tab_container_navigator/tab_container_navigator.tscn" id="4_cp8h8"]

[node name="Panel" type="Panel" groups=["freeze_during_button_remap", "popup", "time_blocking"]]
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -447.0
offset_top = -294.0
offset_right = 447.0
offset_bottom = 294.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_dmpnt")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
current_tab = 0
clip_tabs = false
tab_focus_mode = 0

[node name="GAME" type="PanelContainer" parent="VBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TabContainer/GAME"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/GAME/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/TabContainer/GAME/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Local Multiplayer:"
fit_content = true
autowrap_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/GAME/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayerToggle_1" type="Button" parent="VBoxContainer/TabContainer/GAME/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "TOGGLE_PLAYER_1"

[node name="PlayerToggle_2" type="Button" parent="VBoxContainer/TabContainer/GAME/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "TOGGLE_PLAYER_2"

[node name="PlayerToggle_3" type="Button" parent="VBoxContainer/TabContainer/GAME/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "TOGGLE_PLAYER_3"

[node name="PlayerToggle_4" type="Button" parent="VBoxContainer/TabContainer/GAME/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "TOGGLE_PLAYER_4"

[node name="DISPLAY" type="PanelContainer" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="CONTROLS" type="PanelContainer" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="TabContainer" type="TabContainer" parent="VBoxContainer/TabContainer/CONTROLS"]
layout_mode = 2
tab_alignment = 1
current_tab = 0
tab_focus_mode = 0

[node name="PLAYER_1" parent="VBoxContainer/TabContainer/CONTROLS/TabContainer" instance=ExtResource("2_378xx")]
unique_name_in_owner = true
layout_mode = 2
metadata/_tab_index = 0

[node name="PLAYER_2" parent="VBoxContainer/TabContainer/CONTROLS/TabContainer" instance=ExtResource("2_378xx")]
unique_name_in_owner = true
visible = false
layout_mode = 2
input_controller_index = 1
metadata/_tab_index = 1

[node name="PLAYER_3" parent="VBoxContainer/TabContainer/CONTROLS/TabContainer" instance=ExtResource("2_378xx")]
unique_name_in_owner = true
visible = false
layout_mode = 2
input_controller_index = 2
metadata/_tab_index = 2

[node name="PLAYER_4" parent="VBoxContainer/TabContainer/CONTROLS/TabContainer" instance=ExtResource("2_378xx")]
unique_name_in_owner = true
visible = false
layout_mode = 2
input_controller_index = 3
metadata/_tab_index = 3

[node name="ShortcutButton" parent="VBoxContainer" instance=ExtResource("3_2s1fw")]
layout_mode = 2
label_text = "BACK"
shortcut_actions = ["ui_cancel"]

[node name="TabContainerNavigator" parent="." node_paths=PackedStringArray("tab_containers") instance=ExtResource("4_cp8h8")]
TAB_CYCLE_COOLDOWN_MAX = 0.1
tab_containers = [NodePath("../VBoxContainer/TabContainer"), NodePath("../VBoxContainer/TabContainer/CONTROLS/TabContainer")]

[connection signal="pressed" from="VBoxContainer/TabContainer/GAME/MarginContainer/VBoxContainer/HBoxContainer/PlayerToggle_2" to="." method="_on_player_toggle_2_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/GAME/MarginContainer/VBoxContainer/HBoxContainer/PlayerToggle_3" to="." method="_on_player_toggle_3_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/GAME/MarginContainer/VBoxContainer/HBoxContainer/PlayerToggle_4" to="." method="_on_player_toggle_4_pressed"]
[connection signal="gui_input" from="VBoxContainer/TabContainer/CONTROLS/TabContainer" to="." method="_on_tab_container_gui_input"]
[connection signal="pressed" from="VBoxContainer/ShortcutButton" to="." method="_on_button_pressed"]
